fixed karaoke vote and karaoke song text

--- a/src/pages/meine-gruppe/meine-gruppe.html
+++ b/src/pages/meine-gruppe/meine-gruppe.html
@@ -67,6 +67,47 @@
         </ion-list>
         <p class="frühstück">Treffpunkt Frühstück:</p>
         <p class="treffpunkt">Geb.10.91 Maschinenbau, Mittlerer Hörsaal</p>
+        <div style="text-align: center; background-color: #4ecf37d8; border:3px solid #1985ff;">
+            <p class="songtitel">Karaoke Songtext: Eye of the tiger</p>
+            <p>Risin' up, back on the street
+                <br /> Did my time, took my chances
+                <br /> Went the distance, now I'm back on my feet
+                <br /> Just a man and his will to survive
+                <br />
+                <br /> So many times, it happens too fast
+                <br /> You trade your passion for glory
+                <br /> Don't lose your grip on the dreams of the past
+                <br /> You must fight just to keep them alive
+                <br />
+                <br /> It's the eye of the tiger, it's the thrill of the fight
+                <br /> Risin' up to the challenge of our rival
+                <br /> And the last known survivor stalks his prey in the night
+                <br /> And he's watchin' us all with the eye of the tiger
+                <br />
+                <br /> Face to face, out in the heat
+                <br /> Hangin' tough, stayin' hungry
+                <br /> They stack the odds 'till we take to the street
+                <br /> For the kill with the skill to survive
+                <br />
+                <br /> It's the eye of the tiger, it's the dream of the fight
+                <br /> Risin' up to the challenge of our rival
+                <br /> And the last known survivor stalks his prey in the night
+                <br /> And he's watchin' us all with the eye of the tiger
+                <br />
+                <br /> Risin' up, straight to the top
+                <br /> Had the guts, got the glory
+                <br /> Went the distance, now I'm not gonna stop
+                <br /> Just a man and his will to survive
+                <br />
+                <br /> It's the eye of the tiger, it's the dream of the fight
+                <br /> Risin' up to the challenge of our rivalAnd the last known survivor stalks his prey in the night
+                <br /> And he's watchin' us all with the eye of the tiger
+                <br />
+                <br /> The eye of the tiger
+                <br /> The eye of the tiger
+                <br /> The eye of the tiger
+                <br /> The eye of the tiger</p>
+        </div>
     </div>
 
     <div id="g2">
@@ -106,6 +147,10 @@
         </ion-list>
         <p class="frühstück">Treffpunkt Frühstück:</p>
         <p class="treffpunkt">Geb. 10.91 Raum 228</p>
+        <div style="text-align: center; background-color: #4ecf37d8; border:3px solid #1985ff;">
+            <p class="songtitel">Karaoke Songtext: </p>
+
+        </div>
     </div>
 
     <div id="g3">
@@ -149,6 +194,10 @@
         </ion-list>
         <p class="frühstück">Treffpunkt Frühstück:</p>
         <p class="treffpunkt">Geb. 10.50 HS 101</p>
+        <div style="text-align: center; background-color: #4ecf37d8; border:3px solid #1985ff;">
+            <p class="songtitel">Karaoke Songtext: </p>
+
+        </div>
     </div>
 
     <div id="g4">
@@ -192,6 +241,10 @@
         </ion-list>
         <p class="frühstück">Treffpunkt Frühstück:</p>
         <p class="treffpunkt">Geb. 10.50 Raum HS 102</p>
+        <div style="text-align: center; background-color: #4ecf37d8; border:3px solid #1985ff;">
+            <p class="songtitel">Karaoke Songtext: </p>
+
+        </div>
     </div>
 
     <div id="g5">
@@ -231,6 +284,10 @@
         </ion-list>
         <p class="frühstück">Treffpunkt Frühstück:</p>
         <p class="treffpunkt">Geb. 10.50 Raum 602</p>
+        <div style="text-align: center; background-color: #4ecf37d8; border:3px solid #1985ff;">
+            <p class="songtitel">Karaoke Songtext: </p>
+
+        </div>
     </div>
 
     <div id="g6">
@@ -274,6 +331,10 @@
         </ion-list>
         <p class="frühstück">Treffpunkt Frühstück:</p>
         <p class="treffpunkt">Geb. 10.50 Raum 604</p>
+        <div style="text-align: center; background-color: #4ecf37d8; border:3px solid #1985ff;">
+            <p class="songtitel">Karaoke Songtext: </p>
+
+        </div>
     </div>
 
     <div id="g7">
@@ -313,6 +374,10 @@
         </ion-list>
         <p class="frühstück">Treffpunkt Frühstück:</p>
         <p class="treffpunkt">Geb. 10.50 Raum 702</p>
+        <div style="text-align: center; background-color: #4ecf37d8; border:3px solid #1985ff;">
+            <p class="songtitel">Karaoke Songtext: </p>
+
+        </div>
     </div>
 
     <div id="g8">
@@ -352,6 +417,10 @@
         </ion-list>
         <p class="frühstück">Treffpunkt Frühstück:</p>
         <p class="treffpunkt">Geb. 10.50 Raum 701.3</p>
+        <div style="text-align: center; background-color: #4ecf37d8; border:3px solid #1985ff;">
+            <p class="songtitel">Karaoke Songtext: </p>
+
+        </div>
     </div>
 
     <div id="g9">
@@ -395,6 +464,10 @@
         </ion-list>
         <p class="frühstück">Treffpunkt Frühstück:</p>
         <p class="treffpunkt">Geb. 50.41 Raum -134</p>
+        <div style="text-align: center; background-color: #4ecf37d8; border:3px solid #1985ff;">
+            <p class="songtitel">Karaoke Songtext: </p>
+
+        </div>
     </div>
 
     <div id="g10">
@@ -434,6 +507,10 @@
         </ion-list>
         <p class="frühstück">Treffpunkt Frühstück:</p>
         <p class="treffpunkt">Geb. 50.41 Raum -133</p>
+        <div style="text-align: center; background-color: #4ecf37d8; border:3px solid #1985ff;">
+            <p class="songtitel">Karaoke Songtext: </p>
+
+        </div>
     </div>
 
     <div id="g11">
@@ -477,6 +554,10 @@
         </ion-list>
         <p class="frühstück">Treffpunkt Frühstück:</p>
         <p class="treffpunkt">Geb. 50.41 Raum -108</p>
+        <div style="text-align: center; background-color: #4ecf37d8; border:3px solid #1985ff;">
+            <p class="songtitel">Karaoke Songtext: </p>
+
+        </div>
     </div>
 
     <div id="g12">
@@ -520,6 +601,10 @@
         </ion-list>
         <p class="frühstück">Treffpunkt Frühstück:</p>
         <p class="treffpunkt">Geb. 50.41 Raum -109</p>
+        <div style="text-align: center; background-color: #4ecf37d8; border:3px solid #1985ff;">
+            <p class="songtitel">Karaoke Songtext: </p>
+
+        </div>
     </div>
 
     <div id="g13">
@@ -563,6 +648,10 @@
         </ion-list>
         <p class="frühstück">Treffpunkt Frühstück:</p>
         <p class="treffpunkt">Geb. 50.41 Raum 045/046</p>
+        <div style="text-align: center; background-color: #4ecf37d8; border:3px solid #1985ff;">
+            <p class="songtitel">Karaoke Songtext: </p>
+
+        </div>
     </div>
 
     <div id="g14">
@@ -613,6 +702,10 @@
             <b>
                 <u>Do./Fr:</u>
             </b> Geb. 10.91 Maschinenbau oberer HS</p>
+        <div style="text-align: center; background-color: #4ecf37d8; border:3px solid #1985ff;">
+            <p class="songtitel">Karaoke Songtext: </p>
+
+        </div>
     </div>
 
     <div id="g15">
@@ -656,6 +749,10 @@
         </ion-list>
         <p class="frühstück">Treffpunkt Frühstück:</p>
         <p class="treffpunkt">Geb. 30.96 Seminarraum ZOM (R006)</p>
+        <div style="text-align: center; background-color: #4ecf37d8; border:3px solid #1985ff;">
+            <p class="songtitel">Karaoke Songtext: </p>
+
+        </div>
     </div>
 
     <div id="g16">
@@ -695,6 +792,10 @@
         </ion-list>
         <p class="frühstück">Treffpunkt Frühstück:</p>
         <p class="treffpunkt">Geb. 10.81 Theodor Rehbock HS (HS59)</p>
+        <div style="text-align: center; background-color: #4ecf37d8; border:3px solid #1985ff;">
+            <p class="songtitel">Karaoke Songtext: </p>
+
+        </div>
     </div>
 
     <div id="g17">
@@ -738,6 +839,10 @@
         </ion-list>
         <p class="frühstück">Treffpunkt Frühstück:</p>
         <p class="treffpunkt">Geb. 10.81 Emil Mosonyi-HS (HS62)</p>
+        <div style="text-align: center; background-color: #4ecf37d8; border:3px solid #1985ff;">
+            <p class="songtitel">Karaoke Songtext: </p>
+
+        </div>
     </div>
 
     <div id="g18">
@@ -777,6 +882,10 @@
         </ion-list>
         <p class="frühstück">Treffpunkt Frühstück:</p>
         <p class="treffpunkt">Geb. 10.81 Raum 219.1</p>
+        <div style="text-align: center; background-color: #4ecf37d8; border:3px solid #1985ff;">
+            <p class="songtitel">Karaoke Songtext: </p>
+
+        </div>
     </div>
 
     <div id="g19">
@@ -820,6 +929,10 @@
         </ion-list>
         <p class="frühstück">Treffpunkt Frühstück:</p>
         <p class="treffpunkt">Geb. 30.28 Seminarraum 1 (R220)</p>
+        <div style="text-align: center; background-color: #4ecf37d8; border:3px solid #1985ff;">
+            <p class="songtitel">Karaoke Songtext: </p>
+
+        </div>
     </div>
 
     <div id="g20">
@@ -859,6 +972,10 @@
         </ion-list>
         <p class="frühstück">Treffpunkt Frühstück:</p>
         <p class="treffpunkt">Geb. 30.28 Seminarraum 2 (R120)</p>
+        <div style="text-align: center; background-color: #4ecf37d8; border:3px solid #1985ff;">
+            <p class="songtitel">Karaoke Songtext: </p>
+
+        </div>
     </div>
 
     <div id="g21">
@@ -902,6 +1019,10 @@
         </ion-list>
         <p class="frühstück">Treffpunkt Frühstück:</p>
         <p class="treffpunkt">Geb. 30.28 Seminarraum 3 (R005)</p>
+        <div style="text-align: center; background-color: #4ecf37d8; border:3px solid #1985ff;">
+            <p class="songtitel">Karaoke Songtext: </p>
+
+        </div>
     </div>
 
     <div id="g22">
@@ -945,6 +1066,10 @@
         </ion-list>
         <p class="frühstück">Treffpunkt Frühstück:</p>
         <p class="treffpunkt">Geb. 30.28 Seminarraum 4 (R004)</p>
+        <div style="text-align: center; background-color: #4ecf37d8; border:3px solid #1985ff;">
+            <p class="songtitel">Karaoke Songtext: </p>
+
+        </div>
     </div>
 
     <div id="g23">
@@ -988,6 +1113,10 @@
         </ion-list>
         <p class="frühstück">Treffpunkt Frühstück:</p>
         <p class="treffpunkt">Geb. 05.20 Raum 1.C01</p>
+        <div style="text-align: center; background-color: #4ecf37d8; border:3px solid #1985ff;">
+            <p class="songtitel">Karaoke Songtext: </p>
+
+        </div>
     </div>
 
     <div id="g24">
@@ -1031,6 +1160,10 @@
         </ion-list>
         <p class="frühstück">Treffpunkt Frühstück:</p>
         <p class="treffpunkt">Geb. 05.20 Raum 1.C04</p>
+        <div style="text-align: center; background-color: #4ecf37d8; border:3px solid #1985ff;">
+            <p class="songtitel">Karaoke Songtext: </p>
+
+        </div>
     </div>
 
     <div id="g25" style="margin-top: 8%;">
