--- a/src/pages/karaoke/karaoke.html
+++ b/src/pages/karaoke/karaoke.html
@@ -26,7 +26,7 @@
   </div>
 
   <div>
-    <iframe src="https://directpoll.com/r?XDbzPBd3ixYqg8xnEPzeT5zC4le6wBZEeDtJU8bAi" height="400" scrolling="auto" width="100%"
+    <iframe style="pointer-events: none" src="https://directpoll.com/r?XDbzPBd3ixYqg8xnEPzeT5zC4le6wBZEeDtJU8bAi" height="400" scrolling="auto" width="100%"
       frameBorder="0">
       <!-- Ergebnisse live    -->
     </iframe>
