added kroko game links

--- a/src/pages/infos/infos.html
+++ b/src/pages/infos/infos.html
@@ -25,14 +25,23 @@
 
 
 <ion-content padding>
-
-
-    <p>Aboniert unser Filmteam für die geisten O-Phasen-Storys
-    </p>
     <ion-list>
         <a ion-item href="https://instagram.com/filmteam2k18?utm_source=ig_profile_share&igshid=xplh4rlsg4jz">
             <ion-icon name="camera"></ion-icon>
             &nbsp;FILMTEAM STORYS (abonieren!)
+        </a>
+    </ion-list>
+
+    <p>Ladet euch hier das niceste O-Phasen Game herunter!
+    </p>
+    <ion-list>
+        <a ion-item href="http://tiny.cc/fatkrokoandroid">
+            <ion-icon name="logo-android"></ion-icon>
+            &nbsp;Android
+        </a>
+        <a ion-item href="http://tiny.cc/fatkrokoios">
+            <ion-icon name="logo-apple"></ion-icon>
+            &nbsp;IOS
         </a>
     </ion-list>
 
