--- a/src/pages/zeitplan/zeitplan.html
+++ b/src/pages/zeitplan/zeitplan.html
@@ -26,7 +26,7 @@
                 Begrüßung
             </ion-card-title>
             <p>
-                The most popular industrial group ever, and largely responsible for bringing the alcohol to a mass audience.
+                Eine extrem #seriöse Veranstaltung. Wir hoffen einige von euch konnten sich erfolgreich das #beschde Stipendium abholen.
             </p>
         </ion-card-content>
     </ion-card>
@@ -115,10 +115,14 @@
 
             </ion-card-title>
             <p>Geile Gruppen und noch geilere Menschen warten auf euch! #seriös Die Spezialeinführung sollte niemand verpassen!
-                Bei den 212.982 Portalen wird es euch sonst schnell schwindelig.
-                <br> HSG Plan wird im Newsfeed geposted, da nicht rechtzeitig fertig
-                <a href="#" onclick="window.open('https://www.dropbox.com/sh/203coc57f0b90z3/AAA_n4uabrd_E2_1s-y08pzma?dl=0', '_system', 'location=yes'); return false;">Link zum Lageplan, hier klicken!</a>
-            </p>
+                Bei den 212.982 Portalen wird es euch sonst schnell schwindelig.</p>
+            <div style="text-align: center; margin-top: 5%;">
+                <a button href="#" onclick="window.open('https://drive.google.com/file/d/1A3zsXcaFt1zjZsiCXusUifFteugKrG6R/view', '_system', 'location=yes'); return false;"
+                    ion-button icon-start color="secondary">
+                    <ion-icon name="ios-map-outline"></ion-icon>
+                    Stellplan
+                </a>
+            </div>
         </ion-card-content>
     </ion-card>
 
@@ -192,17 +196,17 @@
         </ion-card-content>
     </ion-card>
 
-    <ion-card>
-            <img src="assets/imgs/events/gaha.jpg" />
-            <ion-card-content>
-                <ion-card-title>
-                    GaHa-Party
-                </ion-card-title>
-                <h4>Die #fetteste Party in Karlsruhe! Ungelogen.</h4>
-               
-                <h1>Fettestes Event der Woche</h1>
-            </ion-card-content>
-        </ion-card>
+    <ion-card style="border:5px solid #fc0000; background-color: rgba(209, 85, 85, 0.658)">
+        <img src="assets/imgs/events/gaha.jpg" />
+        <ion-card-content>
+            <ion-card-title>
+                GaHa-Party
+            </ion-card-title>
+            <h4>Die #fetteste Party in Karlsruhe! Ungelogen.</h4>
+
+            <h1>Fettestes Event der Woche</h1>
+        </ion-card-content>
+    </ion-card>
 
 
     <ion-card>
@@ -213,7 +217,13 @@
             </ion-card-title>
             <p>Ihr habt Skill an der Flasche und wollt eure Fähigkeiten auch am Plastikbecher beweisen? Dann ist das der richtige
                 Moment dafür!</p>
-           
+            <div style="text-align: center; margin-top: 5%;">
+                <a button href="#" onclick="window.open('https://lh3.googleusercontent.com/DTgcRh2mnJCkM5IH2CnbJljqWMMRdYm9MPdh_Tzp4qMmxcTkzX8ymcTMtOKhaZUApjjbl8qTB8IPQNM-K4Sz=w1919-h909', '_system', 'location=yes'); return false;"
+                    ion-button icon-start color="secondary">
+                    <ion-icon name="ios-map-outline"></ion-icon>
+                    Lageplan
+                </a>
+            </div>
         </ion-card-content>
     </ion-card>
 
