--- a/src/pages/bier/bier.html
+++ b/src/pages/bier/bier.html
@@ -20,4 +20,6 @@
 
 <ion-content>
   <iframe width="100%" height="250" src="https://live.amcharts.com/QzOTg/embed/" frameborder="0"></iframe>
+  <p style="margin-top: 10%; text-align: center; font-size: 22px; text-decoration: underline;">Mit vielen Grüßen von euren Bimis!</p>
+  <img style="padding: 14px" src="http://tiny.cc/bimifoto">
 </ion-content>
