--- a/src/pages/graphs/graphs.html
+++ b/src/pages/graphs/graphs.html
@@ -51,13 +51,18 @@
       <ion-icon name="ios-arrow-forward-outline" item-end></ion-icon>
       Karaoke-Voting
     </button>
+    <button [style.backgroundColor]="myColor2" ion-item (click)="openTutorenfotos()">
+      <ion-icon name="ios-camera" item-start></ion-icon>
+      <ion-icon name="ios-arrow-forward-outline" item-end></ion-icon>
+      Tutoren-Fotos
+    </button>
     <button [style.backgroundColor]="myColor2" ion-item (click)="openGaha()">
       <ion-icon name="ios-camera-outline" item-start></ion-icon>
       <ion-icon name="ios-arrow-forward-outline" item-end></ion-icon>
       Karaoke-Bilder
     </button>
     <button [style.backgroundColor]="myColor2" ion-item (click)="openFlunky()">
-      <ion-icon name="ios-football-outline" item-start></ion-icon>
+      <ion-icon name="ios-football" item-start></ion-icon>
       <ion-icon name="ios-arrow-forward-outline" item-end></ion-icon>
       Flunky-Bowl Live
     </button>
