--- a/src/pages/karte/karte.html
+++ b/src/pages/karte/karte.html
@@ -27,39 +27,39 @@
 
   <ion-list>
     <a ion-item href="https://goo.gl/maps/mUiDW5xZSjm">
-      <ion-icon name="md-globe"></ion-icon>
+      <ion-icon name="ios-pin"></ion-icon>
         &nbsp;START
     </a>
     <a ion-item href="https://goo.gl/maps/TGtRRQ2yUH32">
-        <ion-icon name="md-globe"></ion-icon>
+        <ion-icon name="ios-pin"></ion-icon>
         &nbsp;Kennenlernen 1
     </a>
     <a ion-item href="https://goo.gl/maps/r9AKcN3y8762">
-        <ion-icon name="md-globe"></ion-icon>
+        <ion-icon name="ios-pin"></ion-icon>
         &nbsp;Kennenlernen 2
     </a>
     <a ion-item href="https://goo.gl/maps/VKY8dtTyCVv">
-        <ion-icon name="md-globe"></ion-icon>
+        <ion-icon name="ios-pin"></ion-icon>
         &nbsp;Station 1
     </a>
     <a ion-item href="https://goo.gl/maps/hVXz6E5heFD2">
-        <ion-icon name="md-globe"></ion-icon>
+        <ion-icon name="ios-pin"></ion-icon>
         &nbsp;Station 2
     </a>
     <a ion-item href="https://goo.gl/maps/n2uojtDjSKm">
-        <ion-icon name="md-globe"></ion-icon>
+        <ion-icon name="ios-pin"></ion-icon>
         &nbsp;Station 3
     </a>
-    <a ion-item href="https://goo.gl/maps/ZtMXWRQpRD22">
-        <ion-icon name="md-globe"></ion-icon>
+    <a ion-item href="https://www.google.com/maps?q=49.00855255126953,8.394397735595703&z=17&hl=de">
+        <ion-icon name="ios-pin"></ion-icon>
         &nbsp;Station 4
     </a>
     <a ion-item href="https://goo.gl/maps/3GTGER9L1vx">
-      <ion-icon name="md-globe"></ion-icon>
+      <ion-icon name="ios-pin"></ion-icon>
       &nbsp;Station 5
     </a>
     <a ion-item href="https://goo.gl/maps/Fq3XDkRAp8t">
-        <ion-icon name="md-globe"></ion-icon>
+        <ion-icon name="ios-pin"></ion-icon>
         &nbsp;Station 6
     </a>
 </ion-list>
