--- a/src/pages/zeitplan/zeitplan.html
+++ b/src/pages/zeitplan/zeitplan.html
@@ -28,6 +28,9 @@
             <p>
                 Eine extrem #seriöse Veranstaltung. Wir hoffen einige von euch konnten sich erfolgreich das #beschde Stipendium abholen.
             </p>
+            <p>
+                    Wer weiß, vielleicht verteilt Deloitte auch ein Stipendium an den besten Säufer 🤔🤔🤔
+                </p>
         </ion-card-content>
     </ion-card>
 
@@ -51,14 +54,14 @@
                 Clubs
 
             </ion-card-title>
-            <p>#bisderschweißvonderdecketropft</p>
+            <p>#bisderschweißvonderdecketropft 🤤</p>
 
             <ul>
-                <li>Montag: Agostea</li>
-                <li>Mittwoch: Cen Club</li>
-                <li>Donnerstag: Überraschung!</li>
-                <li>Freitag: Kroko-Keller!</li>
-                <li>Smastag: GaHa-Party</li>
+                <li>Montag: Agostea 🤤 </li>
+                <li>Mittwoch: Cen Club 🤤</li>
+                <li>Donnerstag: Überraschung! 🤤</li>
+                <li>Freitag: Kroko-Keller! 🤤</li>
+                <li>Smastag: GaHa-Party 🤤</li>
 
             </ul>
 
@@ -73,7 +76,7 @@
                 Gruppenfrühstück
             </ion-card-title>
             <p>Kater? Bestimmt nicht, du hast doch sicher nie aufgehört zu feiern und zu trinken!</p>
-            <p>Pünktlichkeit ist Pflicht.</p>
+            <p>Das edelste Gesöff und duftes Schmankerl.🥞🍳🍼 Pünktlichkeit ist natürlich Pflicht.⏱️</p>
 
         </ion-card-content>
     </ion-card>
@@ -83,12 +86,12 @@
         <ion-card-content>
             <ion-card-title>
                 Schloga SchloGa-Rallye
-
             </ion-card-title>
             <p>Falls ihr euch fragt, wir haben die Veranstaltung angemeldet! Vieleicht nicht alle Stationen detailliert... aber
-                angemeldet.
+                angemeldet.😏
             </p>
-
+            <p>Kleiderordnung nicht vergessen ! KEIN Anzug 😘
+                </p>
         </ion-card-content>
     </ion-card>
 
@@ -101,7 +104,7 @@
 
             </ion-card-title>
             <p>Schon viele bekannte Künstler wie Thom Barron sind am KIT zu festen größen im Business geworden. Du bist dafür
-                sicher auch ein heißer Kandidat!</p>
+                sicher auch ein heißer Kandidat! Der größte Schreihals kann auch etwas gewinnen. 🤩</p>
 
         </ion-card-content>
     </ion-card>
@@ -135,6 +138,8 @@
 
             </ion-card-title>
             <p>Kulinarischer Ausflug gefällig? #kulturmussauchmal Tipp: NICHT VORGLÜHEN und GRUNDLAGE!</p>
+            <p>Elsaaaaaaas Elsaaaaaaaaass, Elsaaaaaaas Elsaaaaaaas Elsaaaaaaass! 🥖🇫🇷</p>
+            <p>Fährst du rein bist'e nüchtern, fährst du raus dann bist du voll! 🍻🍺</p>
         </ion-card-content>
     </ion-card>
 
@@ -146,9 +151,10 @@
                 Weißwurstfrühstück
 
             </ion-card-title>
-            <p>#solidarität und #kultureller #austausch mit unseren Brüdern im Osten... also nicht sooo krasser Osten... Bayern
-                eben.
+            <p>Bist du noch blass vom langen Feiern, triff dich mit Gleichgesinnten. Unsere Weißwürste sind auch blass.
             </p>
+            <p>Du bist blässer ? Dann geht ein Bier aufs Haus. Fragt einfach den Kellner. 😲
+                </p>
         </ion-card-content>
     </ion-card>
 
@@ -160,6 +166,8 @@
 
             </ion-card-title>
             <p>Neu in der Stadt? ja, nein? Egal. Die DisKAvery lohnt sich immer! Die Route findet ihr unter "Karte"!</p>
+            <p>Hier bekommst du die Orte zum Entspannen gezeigt 😇 </p>
+            <p>(wir wissen wo es gut ist😏) </p>
         </ion-card-content>
     </ion-card>
 
@@ -171,7 +179,7 @@
                 Thursdaynight
 
             </ion-card-title>
-            <p>#secret.</p>
+            <p>#secret. 🍆🍑♥️</p>
         </ion-card-content>
     </ion-card>
 
@@ -182,7 +190,7 @@
                 Profcafé
 
             </ion-card-title>
-            <p>Profs mal ganz privat.</p>
+            <p>Profs mal ganz privat. Nutzt die Chance für den ersten Eindruck und gute Noten.</p>
         </ion-card-content>
     </ion-card>
 
@@ -192,19 +200,20 @@
             <ion-card-title>
                 Unirundgang
             </ion-card-title>
-            <p>#seriös Das Ding ist nicht sooo klein...glaubt mir... und kauft euch ein Fahrrad!</p>
+            <p>#seriös Das Ding ist nicht sooo klein...glaubt mir... und kauft euch ein Fahrrad! </p>
+            <p>Organisiert von den Ehrenmännern der edlen Unirundgäääng.😎</p>
         </ion-card-content>
     </ion-card>
 
     <ion-card style="border:5px solid #fc0000; background-color: rgba(209, 85, 85, 0.658)">
         <img src="assets/imgs/events/gaha.jpg" />
         <ion-card-content>
-            <ion-card-title>
+            <ion-card-title style="font-size: 30px !important; text-decoration: underline;">
                 GaHa-Party
             </ion-card-title>
             <h4>Die #fetteste Party in Karlsruhe! Ungelogen.</h4>
 
-            <h1>Fettestes Event der Woche</h1>
+            <h3> DAS fetteste Event das Jahres</h3>
         </ion-card-content>
     </ion-card>
 
