--- a/src/pages/infos/infos.html
+++ b/src/pages/infos/infos.html
@@ -48,17 +48,16 @@
     <p>Gruppen für die #geilstenErstis (tretet nur EINER!!!! bei)
     </p>
     <ion-list>
-        <a button href="#" onclick="window.open('https://chat.whatsapp.com/CvlIC3NaR2KIIYYhqPNS0h', '_system', 'location=yes'); return false;"
-            ion-button small icon-start color="whatsapp">
-            <ion-icon name="logo-whatsapp"></ion-icon>
-            Whatsapp Gruppe #2
-        </a>
         <a button href="#" onclick="window.open('https://chat.whatsapp.com/BbjABZZDpY5AsgB9vz5ROL', '_system', 'location=yes'); return false;"
             ion-button small icon-start color="whatsapp">
             <ion-icon name="logo-whatsapp"></ion-icon>
             Whatsapp Gruppe #1
         </a>
-
+        <a button href="#" onclick="window.open('https://chat.whatsapp.com/CvlIC3NaR2KIIYYhqPNS0h', '_system', 'location=yes'); return false;"
+            ion-button small icon-start color="whatsapp">
+            <ion-icon name="logo-whatsapp"></ion-icon>
+            Whatsapp Gruppe #2
+        </a>
     </ion-list>
 
 
@@ -123,6 +122,10 @@
         <a ion-item href="https://www.printpeter.de/">
             <ion-icon name="print"></ion-icon>
             &nbsp;PrintPeter (Gratis drucken!)
+        </a>
+        <a ion-item href="https://paypal.me/pools/c/88hOsnrXms">
+            <ion-icon name="beer"></ion-icon>
+            &nbsp;Kaufe den Nerds ein Bier!
         </a>
     </ion-list>
 
