added offfline gruppen bilder

--- a/src/pages/meine-gruppe/meine-gruppe.html
+++ b/src/pages/meine-gruppe/meine-gruppe.html
@@ -30,7 +30,7 @@
         <h3 class="center">
             Deine Tutoren der Gruppe 1:
         </h3>
-        <img src="http://tiny.cc/ophasegruppe1">
+        <img src="assets/imgs/gruppen/1.jpg">
         <p></p>
         <div class="centerbutton">
             <a button href="#" onclick="window.open('https://chat.whatsapp.com/FvEVjcTA9M02qIR2wXlvMa', '_system', 'location=yes'); return false;"
@@ -114,7 +114,7 @@
         <h3 class="center">
             Deine Tutoren der Gruppe 2:
         </h3>
-        <img src="http://tiny.cc/ophasegruppe2">
+        <img src="assets/imgs/gruppen/2.jpg">
         <p></p>
         <div class="centerbutton">
             <a button href="#" onclick="window.open('https://chat.whatsapp.com/C9fG3cJfy907azPKxl0cGk', '_system', 'location=yes'); return false;"
@@ -224,7 +224,7 @@
         <h3 class="center">
             Deine Tutoren der Gruppe 3:
         </h3>
-        <img src="http://tiny.cc/ophasegruppe3">
+        <img src="assets/imgs/gruppen/3.jpg">
         <p></p>
         <div class="centerbutton">
             <a button href="#" onclick="window.open('https://chat.whatsapp.com/LViXT6vYU3zGM0Nd7QNUkI', '_system', 'location=yes'); return false;"
@@ -343,7 +343,7 @@
         <h3 class="center">
             Deine Tutoren der Gruppe 4:
         </h3>
-        <img src="http://tiny.cc/ophasegruppe4">
+        <img src="assets/imgs/gruppen/4.jpg">
         <p></p>
         <div class="centerbutton">
             <a button href="#" onclick="window.open('https://chat.whatsapp.com/JQG4DwXfABCDemFZzv4ApO', '_system', 'location=yes'); return false;"
@@ -480,7 +480,7 @@
         <h3 class="center">
             Deine Tutoren der Gruppe 5:
         </h3>
-        <img src="http://tiny.cc/ophasegruppe5">
+        <img src="assets/imgs/gruppen/5.jpg">
         <p></p>
         <div class="centerbutton">
             <a button href="#" onclick="window.open('https://chat.whatsapp.com/JLK6wuhzjhFDO1tWehwhbr', '_system', 'location=yes'); return false;"
@@ -604,7 +604,7 @@
         <h3 class="center">
             Deine Tutoren der Gruppe 6:
         </h3>
-        <img src="http://tiny.cc/ophasegruppe6">
+        <img src="assets/imgs/gruppen/6.jpg">
         <p></p>
         <div class="centerbutton">
             <a button href="#" onclick="window.open('https://chat.whatsapp.com/G6fjt2zT6FYCStjRQXAz71', '_system', 'location=yes'); return false;"
@@ -747,7 +747,7 @@
         <h3 class="center">
             Deine Tutoren der Gruppe 7:
         </h3>
-        <img src="http://tiny.cc/ophasegruppe7">
+        <img src="assets/imgs/gruppen/7.jpg">
         <p></p>
         <div class="centerbutton">
             <a button href="#" onclick="window.open('https://chat.whatsapp.com/GIjtkfdGxsxIedRfSH6xwt', '_system', 'location=yes'); return false;"
@@ -850,7 +850,7 @@
         <h3 class="center">
             Deine Tutoren der Gruppe 8:
         </h3>
-        <img src="http://tiny.cc/ophasegruppe8">
+        <img src="assets/imgs/gruppen/8.jpg">
         <p></p>
         <div class="centerbutton">
             <a button href="#" onclick="window.open('https://chat.whatsapp.com/JbzAUOyBFK9D6oF7mFekqq', '_system', 'location=yes'); return false;"
@@ -919,7 +919,7 @@
         <h3 class="center">
             Deine Tutoren der Gruppe 9:
         </h3>
-        <img src="http://tiny.cc/ophasegruppe9">
+        <img src="assets/imgs/gruppen/9.jpg">
         <p></p>
         <div class="centerbutton">
             <a button href="#" onclick="window.open('https://chat.whatsapp.com/CCT90thJaaYLkF78Z5s6x3', '_system', 'location=yes'); return false;"
@@ -1021,7 +1021,7 @@
         <h3 class="center">
             Deine Tutoren der Gruppe 10:
         </h3>
-        <img src="http://tiny.cc/ophasegruppe10">
+        <img src="assets/imgs/gruppen/10.jpg">
         <p></p>
         <div class="centerbutton">
             <a button href="#" onclick="window.open('https://chat.whatsapp.com/GahDtzHiBYn2gZPLucRJ6N', '_system', 'location=yes'); return false;"
@@ -1119,7 +1119,7 @@
         <h3 class="center">
             Deine Tutoren der Gruppe 11:
         </h3>
-        <img src="http://tiny.cc/ophasegruppe11">
+        <img src="assets/imgs/gruppen/11.jpg">
         <p></p>
         <div class="centerbutton">
             <a button href="#" onclick="window.open('https://chat.whatsapp.com/ExNaG24QiZ32Vsx0O9jUIK', '_system', 'location=yes'); return false;"
@@ -1213,7 +1213,7 @@
         <h3 class="center">
             Deine Tutoren der Gruppe 12:
         </h3>
-        <img src="http://tiny.cc/ophasegruppe12">
+        <img src="assets/imgs/gruppen/12.jpg">
         <p></p>
         <div class="centerbutton">
             <a button href="#" onclick="window.open('https://chat.whatsapp.com/DdCjUxk8DyIJskd40ONxDn', '_system', 'location=yes'); return false;"
@@ -1365,7 +1365,7 @@
         <h3 class="center">
             Deine Tutoren der Gruppe 13:
         </h3>
-        <img src="http://tiny.cc/ophasegruppe13">
+        <img src="assets/imgs/gruppen/13.jpg">
         <p></p>
         <div class="centerbutton">
             <a button href="#" onclick="window.open('https://chat.whatsapp.com/CGtYbdY22tL7HUpDeS6M39', '_system', 'location=yes'); return false;"
@@ -1490,7 +1490,7 @@
         <h3 class="center">
             Deine Tutoren der Gruppe 14:
         </h3>
-        <img src="http://tiny.cc/ophasegruppe14">
+        <img src="assets/imgs/gruppen/14.jpg">
         <p></p>
         <div class="centerbutton">
             <a button href="#" onclick="window.open('https://chat.whatsapp.com/EsnuWygmiSZDE0PxJ3WwYC', '_system', 'location=yes'); return false;"
@@ -1609,7 +1609,7 @@
         <h3 class="center">
             Deine Tutoren der Gruppe 15:
         </h3>
-        <img src="http://tiny.cc/ophasegruppe15">
+        <img src="assets/imgs/gruppen/15.jpg">
         <p></p>
         <div class="centerbutton">
             <a button href="#" onclick="window.open('https://chat.whatsapp.com/GepBcrxn2dHKw0EoLHHB4c', '_system', 'location=yes'); return false;"
@@ -1730,7 +1730,7 @@
         <h3 class="center">
             Deine Tutoren der Gruppe 16:
         </h3>
-        <img src="http://tiny.cc/ophasegruppe16">
+        <img src="assets/imgs/gruppen/16.jpg">
         <p></p>
         <div class="centerbutton">
             <a button href="#" onclick="window.open(' https://chat.whatsapp.com/Guqn0aSRyDdAlFcnrFZzDq', '_system', 'location=yes'); return false;"
@@ -1809,7 +1809,7 @@
         <h3 class="center">
             Deine Tutoren der Gruppe 17:
         </h3>
-        <img src="http://tiny.cc/ophasegruppe17">
+        <img src="assets/imgs/gruppen/17.jpg">
         <p></p>
         <div class="centerbutton">
             <a button href="#" onclick="window.open('https://chat.whatsapp.com/BIfjZh6zT652k8dPHOKtSG', '_system', 'location=yes'); return false;"
@@ -1911,7 +1911,7 @@
         <h3 class="center">
             Deine Tutoren der Gruppe 18:
         </h3>
-        <img src="http://tiny.cc/ophasegruppe18">
+        <img src="assets/imgs/gruppen/18.jpg">
         <p></p>
         <div class="centerbutton">
             <a button href="#" onclick="window.open('https://chat.whatsapp.com/CH36r6zp8AILkhchZCcwOI', '_system', 'location=yes'); return false;"
@@ -2012,7 +2012,7 @@
         <h3 class="center">
             Deine Tutoren der Gruppe 19:
         </h3>
-        <img src="http://tiny.cc/ophasegruppe19">
+        <img src="assets/imgs/gruppen/19.jpg">
         <p></p>
         <div class="centerbutton">
             <a button href="#" onclick="window.open('https://chat.whatsapp.com/IMSO2JweiFo3fN7hw1QbXZ', '_system', 'location=yes'); return false;"
@@ -2125,7 +2125,7 @@
         <h3 class="center">
             Deine Tutoren der Gruppe 20:
         </h3>
-        <img src="http://tiny.cc/ophasegruppe20">
+        <img src="assets/imgs/gruppen/20.jpg">
         <p></p>
         <div class="centerbutton">
             <a button href="#" onclick="window.open('https://chat.whatsapp.com/F7hEgJd5jwK2RnkWpnM4Nt', '_system', 'location=yes'); return false;"
@@ -2249,7 +2249,7 @@
         <h3 class="center">
             Deine Tutoren der Gruppe 21:
         </h3>
-        <img src="http://tiny.cc/ophasegruppe21">
+        <img src="assets/imgs/gruppen/21.jpg">
         <p></p>
         <div class="centerbutton">
             <a button href="#" onclick="window.open('https://chat.whatsapp.com/Im2M5Ken8Nb8f0hFKZWkK1', '_system', 'location=yes'); return false;"
@@ -2371,7 +2371,7 @@
         <h3 class="center">
             Deine Tutoren der Gruppe 22:
         </h3>
-        <img src="http://tiny.cc/ophasegruppe22">
+        <img src="assets/imgs/gruppen/22.jpg">
         <p></p>
         <div class="centerbutton">
             <a button href="#" onclick="window.open('https://chat.whatsapp.com/GgTp1Crbzhe9JPe8dV01mZ', '_system', 'location=yes'); return false;"
@@ -2522,7 +2522,7 @@
         <h3 class="center">
             Deine Tutoren der Gruppe 23:
         </h3>
-        <img src="http://tiny.cc/ophasegruppe23">
+        <img src="assets/imgs/gruppen/23.jpg">
         <p></p>
         <div class="centerbutton">
             <a button href="#" onclick="window.open('https://chat.whatsapp.com/Eh4Iz7kI2mY5xLL8P3bX2A', '_system', 'location=yes'); return false;"
@@ -2622,7 +2622,7 @@
         <h3 class="center">
             Deine Tutoren der Gruppe 24:
         </h3>
-        <img src="http://tiny.cc/ophasegruppe24">
+        <img src="assets/imgs/gruppen/24.jpg">
         <p></p>
         <div class="centerbutton">
             <a button href="#" onclick="window.open('https://chat.whatsapp.com/DGgHINkFgyWINDIWRKQe6K', '_system', 'location=yes'); return false;"
